--- a/main.yml
+++ b/main.yml
@@ -1,5 +1,3 @@
-name: Python package
-
 on: [push]
 
 jobs:
@@ -16,9 +14,19 @@ jobs:
           architecture: 'x64'
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
+      - name: Run tests
+        run: python pytest.py
 
   windows-test:
     runs-on: windows-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+  ubuntu-test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Run tests
+        run: python pytest.py
